helmet update to create teams page and my teams, prevent from hidding them

--- a/markup/_dist/my_teams.html
+++ b/markup/_dist/my_teams.html
@@ -116,7 +116,7 @@
                 <div class="row">
                   <div class="col-12">
                     <div class="nl-team-card table-data-field">
-                      <p>team NLC2</p><img src="assets/img/helmet-2" alt="helmet" class="hidden-xs-down" class="hidden-xs-down">
+                      <p>team NLC2</p><img src="assets/img/helmet-2" alt="helmet">
                     </div>
                   </div>
                 </div>
@@ -225,7 +225,7 @@
                 <div class="row">
                   <div class="col-12">
                     <div class="nl-team-card table-data-field">
-                      <p>team NLC2</p><img src="assets/img/helmet-3" alt="helmet" class="hidden-xs-down">
+                      <p>team NLC2</p><img src="assets/img/helmet-3" alt="helmet">
                     </div>
                   </div>
                 </div>
@@ -334,7 +334,7 @@
                 <div class="row">
                   <div class="col-12">
                     <div class="nl-team-card table-data-field">
-                      <p>team NLC2</p><img src="assets/img/helmet-2" alt="helmet" class="hidden-xs-down">
+                      <p>team NLC2</p><img src="assets/img/helmet-2" alt="helmet">
                     </div>
                   </div>
                 </div>
@@ -443,7 +443,7 @@
                 <div class="row">
                   <div class="col-12">
                     <div class="nl-team-card table-data-field">
-                      <p>team NLC2</p><img src="assets/img/helmet-3" alt="helmet" class="hidden-xs-down">
+                      <p>team NLC2</p><img src="assets/img/helmet-3" alt="helmet">
                     </div>
                   </div>
                 </div>
