--- a/markup/_dist/create_team_football.html
+++ b/markup/_dist/create_team_football.html
@@ -963,7 +963,7 @@
                   <div class="row">
                     <div class="col-12">
                       <div class="nl-team-card table-data-field">
-                        <h3>team NLC2</h3><img src="assets/img/helmet.png" alt="helmet" class="hidden-xs-down">
+                        <h3>team NLC2</h3><img src="assets/img/helmet.png" alt="helmet">
                       </div>
                     </div>
                   </div>
