fixed header color, set window size experiments

--- a/markup/_dist/contests.html
+++ b/markup/_dist/contests.html
@@ -419,6 +419,42 @@
                         <td>MyTeamName</td>
                         <td>37.90</td>
                       </tr>
+                      <tr>
+                        <td>1</td>
+                        <td>Username</td>
+                        <td>MyTeamName</td>
+                        <td>37.90</td>
+                      </tr>
+                      <tr>
+                        <td>1</td>
+                        <td>Username</td>
+                        <td>MyTeamName</td>
+                        <td>37.90</td>
+                      </tr>
+                      <tr>
+                        <td>1</td>
+                        <td>Username</td>
+                        <td>MyTeamName</td>
+                        <td>37.90</td>
+                      </tr>
+                      <tr>
+                        <td>1</td>
+                        <td>Username</td>
+                        <td>MyTeamName</td>
+                        <td>37.90</td>
+                      </tr>
+                      <tr>
+                        <td>1</td>
+                        <td>Username</td>
+                        <td>MyTeamName</td>
+                        <td>37.90</td>
+                      </tr>
+                      <tr>
+                        <td>1</td>
+                        <td>Username</td>
+                        <td>MyTeamName</td>
+                        <td>37.90</td>
+                      </tr>
                     </tbody>
                   </table>
                 </div>
