--- a/markup/_dist/login.html
+++ b/markup/_dist/login.html
@@ -42,7 +42,7 @@
               <div role="document" class="block-dialog"></div>
               <div class="block-content">
                 <div class="block-header">
-                  <h2 id="loginSectionLabel" class="modal-title">LoginTEST</h2>
+                  <h2 id="loginSectionLabel" class="modal-title">Login</h2>
                 </div>
                 <div class="block-body">
                   <form class="form-signin">
