alignment player data text properly, added more fields to mobile column, increase mob-table height, added more teams button on players pages

--- a/markup/_dist/my_teams.html
+++ b/markup/_dist/my_teams.html
@@ -547,6 +547,446 @@
                 </div>
               </div>
             </div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3">
+              <div class="nl-card-wrapper">
+                <div class="row">
+                  <div class="col-12">
+                    <div class="nl-team-card table-data-field">
+                      <p>team NLC2</p><img src="assets/img/helmet-2" alt="helmet">
+                    </div>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-12">
+                    <table class="table table-striped">
+                      <thead>
+                        <tr>
+                          <th></th>
+                          <th>NAME</th>
+                          <th>POS</th>
+                          <th>FP</th>
+                          <th>SALARY</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        <tr>
+                          <td></td>
+                          <td>Player name</td>
+                          <td class="pos">D</td>
+                          <td>30</td>
+                          <td>$0</td>
+                        </tr>
+                        <tr>
+                          <td></td>
+                          <td>Player name</td>
+                          <td class="pos">D</td>
+                          <td>30</td>
+                          <td>$0</td>
+                        </tr>
+                        <tr>
+                          <td class="indicated"><span class="played indicator"></span></td>
+                          <td>Player name</td>
+                          <td class="pos">D</td>
+                          <td>30</td>
+                          <td>$0</td>
+                        </tr>
+                        <tr>
+                          <td></td>
+                          <td>Player name</td>
+                          <td class="pos">D</td>
+                          <td>30</td>
+                          <td>$0</td>
+                        </tr>
+                        <tr>
+                          <td class="indicated"><span class="playing indicator"></span></td>
+                          <td>Player name</td>
+                          <td class="pos">D</td>
+                          <td>30</td>
+                          <td>$0</td>
+                        </tr>
+                        <tr>
+                          <td class="indicated"><span class="playing indicator"></span></td>
+                          <td>Player name</td>
+                          <td class="pos">D</td>
+                          <td>30</td>
+                          <td>$0</td>
+                        </tr>
+                        <tr>
+                          <td></td>
+                          <td>Player name</td>
+                          <td class="pos">D</td>
+                          <td>30</td>
+                          <td>$0</td>
+                        </tr>
+                        <tr>
+                          <td class="indicated"><span class="not-playing indicator"></span></td>
+                          <td>Player name</td>
+                          <td class="pos">D</td>
+                          <td>30</td>
+                          <td>$0</td>
+                        </tr>
+                        <tr>
+                          <td class="indicated"><span class="playing indicator"></span></td>
+                          <td>Player name</td>
+                          <td class="pos">D</td>
+                          <td>30</td>
+                          <td>$0</td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-12">
+                    <div class="nl-team-card-footer">
+                      <div class="nl-team-card-footer--left">
+                        <div class="nl-team-card-btns">
+                          <button class="btn btn-primary btn-sm nl-m-b-14">Edit</button>
+                          <button class="btn btn-sm btn-warning">Delete</button>
+                        </div>
+                      </div>
+                      <div class="nl-team-card-footer--right">
+                        <div class="nl-team-card-result">
+                          <p>TOTAL:<span class="result">$69000</span></p>
+                          <p>FP TOTAL:<span class="result">199.7</span></p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3">
+              <div class="nl-card-wrapper">
+                <div class="row">
+                  <div class="col-12">
+                    <div class="nl-team-card table-data-field">
+                      <p>team NLC2</p><img src="assets/img/helmet-3" alt="helmet">
+                    </div>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-12">
+                    <table class="table table-striped">
+                      <thead>
+                        <tr>
+                          <th></th>
+                          <th>NAME</th>
+                          <th>POS</th>
+                          <th>FP</th>
+                          <th>SALARY</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        <tr>
+                          <td></td>
+                          <td>Player name</td>
+                          <td class="pos">D</td>
+                          <td>30</td>
+                          <td>$0</td>
+                        </tr>
+                        <tr>
+                          <td></td>
+                          <td>Player name</td>
+                          <td class="pos">D</td>
+                          <td>30</td>
+                          <td>$0</td>
+                        </tr>
+                        <tr>
+                          <td class="indicated"><span class="played indicator"></span></td>
+                          <td>Player name</td>
+                          <td class="pos">D</td>
+                          <td>30</td>
+                          <td>$0</td>
+                        </tr>
+                        <tr>
+                          <td></td>
+                          <td>Player name</td>
+                          <td class="pos">D</td>
+                          <td>30</td>
+                          <td>$0</td>
+                        </tr>
+                        <tr>
+                          <td class="indicated"><span class="playing indicator"></span></td>
+                          <td>Player name</td>
+                          <td class="pos">D</td>
+                          <td>30</td>
+                          <td>$0</td>
+                        </tr>
+                        <tr>
+                          <td class="indicated"><span class="playing indicator"></span></td>
+                          <td>Player name</td>
+                          <td class="pos">D</td>
+                          <td>30</td>
+                          <td>$0</td>
+                        </tr>
+                        <tr>
+                          <td></td>
+                          <td>Player name</td>
+                          <td class="pos">D</td>
+                          <td>30</td>
+                          <td>$0</td>
+                        </tr>
+                        <tr>
+                          <td class="indicated"><span class="not-playing indicator"></span></td>
+                          <td>Player name</td>
+                          <td class="pos">D</td>
+                          <td>30</td>
+                          <td>$0</td>
+                        </tr>
+                        <tr>
+                          <td class="indicated"><span class="playing indicator"></span></td>
+                          <td>Player name</td>
+                          <td class="pos">D</td>
+                          <td>30</td>
+                          <td>$0</td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-12">
+                    <div class="nl-team-card-footer">
+                      <div class="nl-team-card-footer--left">
+                        <div class="nl-team-card-btns">
+                          <button class="btn btn-primary btn-sm nl-m-b-14">Edit</button>
+                          <button class="btn btn-sm btn-warning">Delete</button>
+                        </div>
+                      </div>
+                      <div class="nl-team-card-footer--right">
+                        <div class="nl-team-card-result">
+                          <p>TOTAL:<span class="result">$69000</span></p>
+                          <p>FP TOTAL:<span class="result">199.7                                  </span></p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3">
+              <div class="nl-card-wrapper">
+                <div class="row">
+                  <div class="col-12">
+                    <div class="nl-team-card table-data-field">
+                      <p>team NLC2</p><img src="assets/img/helmet-2" alt="helmet">
+                    </div>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-12">
+                    <table class="table table-striped">
+                      <thead>
+                        <tr>
+                          <th></th>
+                          <th>NAME</th>
+                          <th>POS</th>
+                          <th>FP</th>
+                          <th>SALARY</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        <tr>
+                          <td></td>
+                          <td>Player name</td>
+                          <td class="pos">D</td>
+                          <td>30</td>
+                          <td>$0</td>
+                        </tr>
+                        <tr>
+                          <td></td>
+                          <td>Player name</td>
+                          <td class="pos">D</td>
+                          <td>30</td>
+                          <td>$0</td>
+                        </tr>
+                        <tr>
+                          <td class="indicated"><span class="played indicator"></span></td>
+                          <td>Player name</td>
+                          <td class="pos">D</td>
+                          <td>30</td>
+                          <td>$0</td>
+                        </tr>
+                        <tr>
+                          <td></td>
+                          <td>Player name</td>
+                          <td class="pos">D</td>
+                          <td>30</td>
+                          <td>$0</td>
+                        </tr>
+                        <tr>
+                          <td class="indicated"><span class="playing indicator"></span></td>
+                          <td>Player name</td>
+                          <td class="pos">D</td>
+                          <td>30</td>
+                          <td>$0</td>
+                        </tr>
+                        <tr>
+                          <td class="indicated"><span class="playing indicator"></span></td>
+                          <td>Player name</td>
+                          <td class="pos">D</td>
+                          <td>30</td>
+                          <td>$0</td>
+                        </tr>
+                        <tr>
+                          <td></td>
+                          <td>Player name</td>
+                          <td class="pos">D</td>
+                          <td>30</td>
+                          <td>$0</td>
+                        </tr>
+                        <tr>
+                          <td class="indicated"><span class="not-playing indicator"></span></td>
+                          <td>Player name</td>
+                          <td class="pos">D</td>
+                          <td>30</td>
+                          <td>$0</td>
+                        </tr>
+                        <tr>
+                          <td class="indicated"><span class="playing indicator"></span></td>
+                          <td>Player name</td>
+                          <td class="pos">D</td>
+                          <td>30</td>
+                          <td>$0</td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-12">
+                    <div class="nl-team-card-footer">
+                      <div class="nl-team-card-footer--left">
+                        <div class="nl-team-card-btns">
+                          <button class="btn btn-primary btn-sm nl-m-b-14">Edit</button>
+                          <button class="btn btn-sm btn-warning">Delete</button>
+                        </div>
+                      </div>
+                      <div class="nl-team-card-footer--right">
+                        <div class="nl-team-card-result">
+                          <p>TOTAL:<span class="result">$69000</span></p>
+                          <p>FP TOTAL:<span class="result">199.7</span></p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3">
+              <div class="nl-card-wrapper">
+                <div class="row">
+                  <div class="col-12">
+                    <div class="nl-team-card table-data-field">
+                      <p>team NLC2</p><img src="assets/img/helmet-3" alt="helmet">
+                    </div>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-12">
+                    <table class="table table-striped">
+                      <thead>
+                        <tr>
+                          <th></th>
+                          <th>NAME</th>
+                          <th>POS</th>
+                          <th>FP</th>
+                          <th>SALARY</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        <tr>
+                          <td></td>
+                          <td>Player name</td>
+                          <td class="pos">D</td>
+                          <td>30</td>
+                          <td>$0</td>
+                        </tr>
+                        <tr>
+                          <td></td>
+                          <td>Player name</td>
+                          <td class="pos">D</td>
+                          <td>30</td>
+                          <td>$0</td>
+                        </tr>
+                        <tr>
+                          <td class="indicated"><span class="played indicator"></span></td>
+                          <td>Player name</td>
+                          <td class="pos">D</td>
+                          <td>30</td>
+                          <td>$0</td>
+                        </tr>
+                        <tr>
+                          <td></td>
+                          <td>Player name</td>
+                          <td class="pos">D</td>
+                          <td>30</td>
+                          <td>$0</td>
+                        </tr>
+                        <tr>
+                          <td class="indicated"><span class="playing indicator"></span></td>
+                          <td>Player name</td>
+                          <td class="pos">D</td>
+                          <td>30</td>
+                          <td>$0</td>
+                        </tr>
+                        <tr>
+                          <td class="indicated"><span class="playing indicator"></span></td>
+                          <td>Player name</td>
+                          <td class="pos">D</td>
+                          <td>30</td>
+                          <td>$0</td>
+                        </tr>
+                        <tr>
+                          <td></td>
+                          <td>Player name</td>
+                          <td class="pos">D</td>
+                          <td>30</td>
+                          <td>$0</td>
+                        </tr>
+                        <tr>
+                          <td class="indicated"><span class="not-playing indicator"></span></td>
+                          <td>Player name</td>
+                          <td class="pos">D</td>
+                          <td>30</td>
+                          <td>$0</td>
+                        </tr>
+                        <tr>
+                          <td class="indicated"><span class="playing indicator"></span></td>
+                          <td>Player name</td>
+                          <td class="pos">D</td>
+                          <td>30</td>
+                          <td>$0</td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-12">
+                    <div class="nl-team-card-footer">
+                      <div class="nl-team-card-footer--left">
+                        <div class="nl-team-card-btns">
+                          <button class="btn btn-primary btn-sm nl-m-b-14">Edit</button>
+                          <button class="btn btn-sm btn-warning">Delete</button>
+                        </div>
+                      </div>
+                      <div class="nl-team-card-footer--right">
+                        <div class="nl-team-card-result">
+                          <p>TOTAL:<span class="result">$69000</span></p>
+                          <p>FP TOTAL:<span class="result">199.7</span></p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-12 more-teams-button"><a href=""> 
+                <div class="btn btn-primary btn-lg btn-create-team">More Teams</div></a></div>
           </div>
         </div>
       </section>
