--- a/markup/_dist/players.html
+++ b/markup/_dist/players.html
@@ -230,8 +230,260 @@
                           </div>
                         </div>
                       </div>
-                      <div class="nl-content">
+                      <div class="nl-content nl-table-scroll">
                         <div id="accordion" role="tablist" aria-multiselectable="true">
+                          <div class="card">
+                            <div role="tab" id="headingOne" class="card-header"><a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne" class="collapsed">
+                                <div class="row">
+                                  <div class="col-6">
+                                    <p>Sebastian Giovinco</p>
+                                    <p class="act">ACT</p>
+                                  </div>
+                                  <div class="col-6">
+                                    <p>28.33</p>
+                                    <p>$12,500</p>
+                                  </div>
+                                </div></a></div>
+                            <div id="collapseOne" role="tabpanel" aria-labelledby="headingOne" class="collapse">
+                              <div class="card-block">
+                                <div class="row align-items-center">
+                                  <div class="col-6">
+                                    <p class="avatar"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"></p>
+                                  </div>
+                                  <div class="col-6">
+                                    <p class="nl-pl-social"><a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a><a href="#"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></p>
+                                  </div>
+                                  <div class="col-6">
+                                    <p><span>LEAGUE:</span></p>
+                                  </div>
+                                  <div class="col-6">
+                                    <p>
+                                      <p><img src="assets/img/flag/USA.png" alt="USA"></p>
+                                    </p>
+                                  </div>
+                                  <div class="col-6">
+                                    <p><span>NEWS:</span></p>
+                                  </div>
+                                  <div class="col-6">
+                                    <p><i class="fa fa-newspaper-o" aria-hidden="true"></i></p>
+                                  </div>
+                                  <div class="col-6">
+                                    <p><span>TEAM:</span></p>
+                                  </div>
+                                  <div class="col-6">
+                                    <p>REAL MADRID</p>
+                                  </div>
+                                  <div class="col-6">
+                                    <p><span>POS:</span></p>
+                                  </div>
+                                  <div class="col-6">
+                                    <p>A</p>
+                                  </div>
+                                  <div class="col-6">
+                                    <p><span>OPP:</span></p>
+                                  </div>
+                                  <div class="col-6">
+                                    <p>Gameday</p>
+                                  </div>
+                                  <div class="col-6">
+                                    <p><span>Gameday:</span></p>
+                                  </div>
+                                  <div class="col-6">
+                                    <p>09/17/17 11:00 PM</p>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="card">
+                            <div role="tab" id="headingTwo" class="card-header"><a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo" class="collapsed">
+                                <div class="row">
+                                  <div class="col-6">
+                                    <p>Sebastian Giovinco</p>
+                                    <p class="act">ACT</p>
+                                  </div>
+                                  <div class="col-6">
+                                    <p>28.33</p>
+                                    <p>$12,500</p>
+                                  </div>
+                                </div></a></div>
+                            <div id="collapseTwo" role="tabpanel" aria-labelledby="headingOne" class="collapse">
+                              <div class="card-block">
+                                <div class="row align-items-center">
+                                  <div class="col-6">
+                                    <p class="avatar"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"></p>
+                                  </div>
+                                  <div class="col-6">
+                                    <p class="nl-pl-social"><a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a><a href="#"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></p>
+                                  </div>
+                                  <div class="col-6">
+                                    <p><span>LEAGUE:</span></p>
+                                  </div>
+                                  <div class="col-6">
+                                    <p>
+                                      <p><img src="assets/img/flag/USA.png" alt="USA"></p>
+                                    </p>
+                                  </div>
+                                  <div class="col-6">
+                                    <p><span>NEWS:</span></p>
+                                  </div>
+                                  <div class="col-6">
+                                    <p><i class="fa fa-newspaper-o" aria-hidden="true"></i></p>
+                                  </div>
+                                  <div class="col-6">
+                                    <p><span>TEAM:</span></p>
+                                  </div>
+                                  <div class="col-6">
+                                    <p>REAL MADRID</p>
+                                  </div>
+                                  <div class="col-6">
+                                    <p><span>POS:</span></p>
+                                  </div>
+                                  <div class="col-6">
+                                    <p>A</p>
+                                  </div>
+                                  <div class="col-6">
+                                    <p><span>OPP:</span></p>
+                                  </div>
+                                  <div class="col-6">
+                                    <p>Gameday</p>
+                                  </div>
+                                  <div class="col-6">
+                                    <p><span>Gameday:</span></p>
+                                  </div>
+                                  <div class="col-6">
+                                    <p>09/17/17 11:00 PM</p>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="card">
+                            <div role="tab" id="headingOne" class="card-header"><a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne" class="collapsed">
+                                <div class="row">
+                                  <div class="col-6">
+                                    <p>Sebastian Giovinco</p>
+                                    <p class="act">ACT</p>
+                                  </div>
+                                  <div class="col-6">
+                                    <p>28.33</p>
+                                    <p>$12,500</p>
+                                  </div>
+                                </div></a></div>
+                            <div id="collapseOne" role="tabpanel" aria-labelledby="headingOne" class="collapse">
+                              <div class="card-block">
+                                <div class="row align-items-center">
+                                  <div class="col-6">
+                                    <p class="avatar"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"></p>
+                                  </div>
+                                  <div class="col-6">
+                                    <p class="nl-pl-social"><a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a><a href="#"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></p>
+                                  </div>
+                                  <div class="col-6">
+                                    <p><span>LEAGUE:</span></p>
+                                  </div>
+                                  <div class="col-6">
+                                    <p>
+                                      <p><img src="assets/img/flag/USA.png" alt="USA"></p>
+                                    </p>
+                                  </div>
+                                  <div class="col-6">
+                                    <p><span>NEWS:</span></p>
+                                  </div>
+                                  <div class="col-6">
+                                    <p><i class="fa fa-newspaper-o" aria-hidden="true"></i></p>
+                                  </div>
+                                  <div class="col-6">
+                                    <p><span>TEAM:</span></p>
+                                  </div>
+                                  <div class="col-6">
+                                    <p>REAL MADRID</p>
+                                  </div>
+                                  <div class="col-6">
+                                    <p><span>POS:</span></p>
+                                  </div>
+                                  <div class="col-6">
+                                    <p>A</p>
+                                  </div>
+                                  <div class="col-6">
+                                    <p><span>OPP:</span></p>
+                                  </div>
+                                  <div class="col-6">
+                                    <p>Gameday</p>
+                                  </div>
+                                  <div class="col-6">
+                                    <p><span>Gameday:</span></p>
+                                  </div>
+                                  <div class="col-6">
+                                    <p>09/17/17 11:00 PM</p>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="card">
+                            <div role="tab" id="headingTwo" class="card-header"><a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo" class="collapsed">
+                                <div class="row">
+                                  <div class="col-6">
+                                    <p>Sebastian Giovinco</p>
+                                    <p class="act">ACT</p>
+                                  </div>
+                                  <div class="col-6">
+                                    <p>28.33</p>
+                                    <p>$12,500</p>
+                                  </div>
+                                </div></a></div>
+                            <div id="collapseTwo" role="tabpanel" aria-labelledby="headingOne" class="collapse">
+                              <div class="card-block">
+                                <div class="row align-items-center">
+                                  <div class="col-6">
+                                    <p class="avatar"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"></p>
+                                  </div>
+                                  <div class="col-6">
+                                    <p class="nl-pl-social"><a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a><a href="#"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></p>
+                                  </div>
+                                  <div class="col-6">
+                                    <p><span>LEAGUE:</span></p>
+                                  </div>
+                                  <div class="col-6">
+                                    <p>
+                                      <p><img src="assets/img/flag/USA.png" alt="USA"></p>
+                                    </p>
+                                  </div>
+                                  <div class="col-6">
+                                    <p><span>NEWS:</span></p>
+                                  </div>
+                                  <div class="col-6">
+                                    <p><i class="fa fa-newspaper-o" aria-hidden="true"></i></p>
+                                  </div>
+                                  <div class="col-6">
+                                    <p><span>TEAM:</span></p>
+                                  </div>
+                                  <div class="col-6">
+                                    <p>REAL MADRID</p>
+                                  </div>
+                                  <div class="col-6">
+                                    <p><span>POS:</span></p>
+                                  </div>
+                                  <div class="col-6">
+                                    <p>A</p>
+                                  </div>
+                                  <div class="col-6">
+                                    <p><span>OPP:</span></p>
+                                  </div>
+                                  <div class="col-6">
+                                    <p>Gameday</p>
+                                  </div>
+                                  <div class="col-6">
+                                    <p><span>Gameday:</span></p>
+                                  </div>
+                                  <div class="col-6">
+                                    <p>09/17/17 11:00 PM</p>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
                           <div class="card">
                             <div role="tab" id="headingOne" class="card-header"><a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne" class="collapsed">
                                 <div class="row">
@@ -365,7 +617,7 @@
                       <table class="table table-striped">
                         <thead>
                           <tr>
-                            <th>NAME</th>
+                            <th class="name-players-table">NAME</th>
                             <th>SALARY</th>
                             <th>FP</th>
                             <th>STATUS</th>
