--- a/markup/_dist/football_enter_contests.html
+++ b/markup/_dist/football_enter_contests.html
@@ -204,7 +204,7 @@
                   <div class="row">
                     <div class="col-12">
                       <div class="nl-team-card table-data-field">
-                        <h3>team NLC2</h3><img src="assets/img/helmet.png" alt="helmet" class="hidden-xs-down helmet-team">
+                        <h3>team NLC2</h3><img src="assets/img/helmet.png" alt="helmet" class="helmet-team">
                       </div>
                     </div>
                   </div>
