--- a/markup/_dist/homepage.html
+++ b/markup/_dist/homepage.html
@@ -775,7 +775,7 @@
                         <div class="row">
                           <div class="col-12 no-padding">
                             <div class="nl-team-card table-data-field">
-                              <h3>team NLC2</h3><img src="assets/img/helmet.png" alt="helmet" class="hidden-xs-down helmet">
+                              <h3>team NLC2</h3><img src="assets/img/helmet.png" alt="helmet" class="helmet">
                             </div>
                           </div>
                         </div>
